--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="menu.css">
     <link rel="stylesheet" href="texto_inicio.css">
@@ -13,10 +14,16 @@
     <div class="background-wrap">
         <div class="background">
             <ul class="navegar">
-                <li class="inicio glowIn" >Inicio</li>
+               <!--  <li class="inicio glowIn" >Inicio</li>
                 <li class="sobre_me glowIn" >Sobre mi</li>
                 <li class="trabajos glowIn" >Trabajos</li>
-                <li class="contacto glowIn" >Contacto</li>
+                <li class="contacto glowIn" >Contacto</li> -->
+            
+                <div class="container_contact">
+                    <div onclick="location.href='https://www.linkedin.com/in/nadia-klokova-91a672a7/'"  class = "contact"><i class="fab fa-linkedin-in"></i></div>
+                    <div onclick="location.href='https://github.com/creativa-nk'" class = "contact"><i class="fab fa-github"></i></div>
+                    <div onclick="location.href='mailto:nadiyaklokova@gmail.com'"  class = "contact"><i class="fas fa-at"></i></div>
+                </div>
             </ul>
         </div>
     </div>
@@ -25,13 +32,8 @@
         <div class="hamb">
             <div class="menu" title="menu"></div>	
         </div>
-       <!--  <div class="hamb">
-           <div class="linea linea1"></div>
-           <div class="linea linea2"></div>
-           <div class="linea linea3"></div>
-        </div> -->
     </div>
-
+<!------------------------ SECTION INICIO--------------- -->
     <section class="inicio">
 
         <div class="container_texto">
@@ -42,7 +44,7 @@
             </h1>
             
             <h2 class="segundo">
-              <span class="texto">I'm Nadia and this is</span>
+              <span class="texto"> <strong>I'm Nadia</strong>  and this is</span>
               <span class="texto">mi personal</span>
               <span class="texto">web site.</span>
             </h2>
