--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             
             <div class="container_bocadillo">
                 <div class="bocadillo">
-                    <p>Hello world!</p>
+                    <p>Hello world! I'm Nadia Klokova</p>
                  </div>
             </div>
             
