cambio de font-family, ajustes

--- a/index.html
+++ b/index.html
@@ -44,10 +44,11 @@
             </h1>
             
             <h2 class="segundo">
-              <span class="texto"> <strong>I'm Nadia</strong></span>
-              <span class="texto">and this is</span>
-              <span class="texto">mi personal</span>
-              <span class="texto">web site.</span>
+              <span class="texto">I'm a </span>
+              <span class="texto"><strong>front-end</strong></span>
+              <span class="texto"><strong> developer</strong></span>
+              <span class="texto">and it's my</span>
+              <span class="texto">website</span>
             </h2>
 
             <h2 class="tercero">
