--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="menu.css">
     <link rel="stylesheet" href="texto_inicio.css">
     <link rel="stylesheet" href="svg.css">
+    <link rel="stylesheet" href="window.css">
     <title>bola_menu</title>
 </head>
 <body>
@@ -61,7 +62,13 @@
         </div>
 
         <div class="container_chica">
-            <div class=" section-img window"></div>
+            <div class=" section-img window">
+                <div class="moon"></div>
+                <div class="star"></div>
+                <div class="star star2"></div>
+                <div class="star star3"></div>
+                <div class="shooting-star"></div>
+            </div>
             
             <div class="container_bocadillo">
                 <div class="bocadillo">
