ajustes letras @query

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="texto_inicio.css">
     <link rel="stylesheet" href="svg.css">
     <link rel="stylesheet" href="window.css">
-    <title>bola_menu</title>
+    <title>Nadia`s_personal_website</title>
 </head>
 <body>
     <div class="background-wrap">
@@ -156,7 +156,7 @@
         </div>
     </div>
 <!------------------------ SECTION INICIO--------------- -->
-    <section class="inicio">
+    <section  data-content id="home" class="inicio">
 
         <div class="container_texto">
             <h1 class="primero">
@@ -169,8 +169,9 @@
               <span class="texto">I'm a </span>
               <span class="texto"><strong>front-end</strong></span>
               <span class="texto"><strong> developer</strong></span>
-              <span class="texto">and it's my</span>
-              <span class="texto">website</span>
+              <span class="texto">my website</span>
+              <span class="texto">is under</span>
+              <span class="texto">construction</span>
             </h2>
 
             <h2 class="tercero">
@@ -324,12 +325,9 @@
                     12 -3 43 -9 69 -14z"/>
                     </g>
                     </svg>
-            
-           </div>
-          
+           </div> 
         </div>
     </section>
-
 
    <script src="main.js"></script> 
 </body>
