--- a/index.html
+++ b/index.html
@@ -4,13 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="menu.css">
     <link rel="stylesheet" href="texto_inicio.css">
     <link rel="stylesheet" href="svg.css">
     <link rel="stylesheet" href="window.css">
-    <title>Nadia`s_personal_website</title>
+
+    
+    <!-- Primary Meta Tags -->
+    <title>Nadia Klokova | front-end</title>
+	<meta name="title" content="Nadia Klokova | front-end">
+	<meta name="description" content="Front-end developer portfolio website.">
+    <meta name="author" content="Nadia Klokova">
+
+    <!-- Open Graph / Facebook -->
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="http://www.nadiaklokova.com/">
+	<meta property="og:title" content="Nadia Klokova | front-end">
+	<meta property="og:description" content="Front-end developer portfolio website.">
+	<meta property="og:image" content="">
+
+	<!-- Twitter -->
+	<meta property="twitter:card" content="summary_large_image">
+	<meta property="twitter:url" content="">
+	<meta property="twitter:title" content="Nadia Klokova | front-end">
+	<meta property="twitter:description" content="Front-end developer portfolio website.">
+	<meta property="twitter:image" content="">
+
 </head>
 <body>
     <div class="background-wrap">
