media query about_me

--- a/about_me/about_me.html
+++ b/about_me/about_me.html
@@ -27,16 +27,16 @@
                 I have a serious passion for UI effects, animations and creating intuitive, dynamic user experiences. 
             </p>
             <p style="animation-delay: 2.4s;">    
-                Well-organised person, problem solver, work with high attention to detail, like teamwork, I consider myself a creative person.  
+                Well-organised person, problem solver, autodidact forever, work with high attention to detail, like teamwork, I consider myself a creative person.  
             </p>
             <p style="animation-delay: 2.7s;">
-                Fan of DIY and creative crafts, fitboxing (Brooklyn), TV series.
+                Fan of DIY and creative crafts, Brooklyn fitboxing, TV series.
             </p>
             <p style="animation-delay: 3s;">
                I am looking for the opportunity to be part of a team with a positive environment, to be able to contribute ideas and continue learning and growing professionally.
             </p>
             <p style="animation-delay: 3.3s;">
-                <a style="animation-delay: 6s;" href="poner link de la pagina de contacto" rel="contact">Let’s make something special.</a>
+                <a class="glowIn" style="animation-delay: 10s;" href="poner link de la pagina de contacto" rel="contact">Let’s make something special.</a>
                 <!-- <a class="glowIn" style="animation-delay: 6s;" href="poner link de la pagina de contacto" rel="contact">Let’s make something special.</a> -->
             </p>
         </div>    
@@ -44,18 +44,7 @@
   
 
 <script>
-        let glowInTexts = document.querySelectorAll(".glowIn");
-        glowInTexts.forEach(glowInText => {
-        let letters = glowInText.textContent.split("");
-        glowInText.textContent = "";
-        letters.forEach((letter, i) => {
-            let span = document.createElement("span");
-            span.textContent = letter;
-            span.style.animationDelay = `${i * 0.05}s`;
-            glowInText.append(span);
-        });
-        });
-
+    
 </script>
     
 </body>
