skills, soft skills

--- a/cerebro/cerebro.html
+++ b/cerebro/cerebro.html
@@ -36,14 +36,16 @@
                 <span class="letra" style="--i:6">a</span>
                 <span class="letra" style="--i:7">g</span>
                 <span class="letra" style="--i:8">e</span>
-                <span class="letra" style="--i:6">g</span>
-                <span class="letra" style="--i:6">e</span>
-                <span class="letra" style="--i:6">s</span>
+                <span class="letra" style="--i:9">g</span>
+                <span class="letra" style="--i:10">e</span>
+                <span class="letra" style="--i:11">s</span>
             </div>
 
             <p>Russian</p>
             <p>Ukrainian</p>
             <p>English</p>
+            <p>Spanish</p>
+  
 
         </div>
 
@@ -102,6 +104,46 @@
         1033 -107 49 -245 100 -305 112 -22 5 -78 18 -125 30 -161 40 -468 51 -700 25z"/>
         </g>
         </svg>
+
+        <div class="soft_skills">
+
+            <div class="titulo"> 
+                <span class="letra" style="--i:1">s</span>
+                <span class="letra" style="--i:2">o</span>
+                <span class="letra" style="--i:3">f</span>
+                <span class="letra" style="--i:4">t</span> &nbsp;
+                <span class="letra" style="--i:5">s</span>
+                <span class="letra" style="--i:6">k</span>
+                <span class="letra" style="--i:7">i</span>
+                <span class="letra" style="--i:8">l</span>
+                <span class="letra" style="--i:6">l</span>
+                <span class="letra" style="--i:6">s</span>
+            </div>
+
+            <p>autodidact</p>
+            <p>problem solver</p>
+            <p>creative</p>
+            <p>comunicative</p>
+            <p>like teamwork</p>
+            <p>curious</p>
+
+            <div class="titulo"> 
+                <span class="letra" style="--i:1">o</span>
+                <span class="letra" style="--i:2">t</span>
+                <span class="letra" style="--i:3">h</span>
+                <span class="letra" style="--i:4">e</span> 
+                <span class="letra" style="--i:5">r</span>
+                <span class="letra" style="--i:6">s</span>
+               
+            </div>
+
+            <p>web design</p>
+            <p>photoshop</p>
+            <p>exel</p>
+            <p>wordpress</p>
+           
+
+        </div>
 
     </section>
 
