--- a/cerebro/cerebro.html
+++ b/cerebro/cerebro.html
@@ -53,6 +53,11 @@
     </div>
 
         <div class="container_svg">
+            <div class="imagen">
+                <img  src="../img/cerebro.png" alt="">
+            </div>
+            
+
             <svg id="cerebro_svg" version="1.0" xmlns="http://www.w3.org/2000/svg"
             width="2500.000000pt" height="2222.000000pt" viewBox="0 0 2500.000000 2222.000000"
             preserveAspectRatio="xMidYMid meet">
