--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="texto_inicio.css">
     <link rel="stylesheet" href="svg.css">
     <link rel="stylesheet" href="window.css">
+    <link rel="stylesheet" href="./about_me/about_me.css">
+    <link rel="stylesheet" href="./cerebro/cerebro.css">
 
     
     <!-- Primary Meta Tags -->
@@ -38,10 +40,10 @@
     <div class="background-wrap">
         <div class="background">
             <ul class="navegar">
-               <!--  <li class="inicio glowIn" >Inicio</li>
-                <li class="sobre_me glowIn" >Sobre mi</li>
-                <li class="trabajos glowIn" >Trabajos</li>
-                <li class="contacto glowIn" >Contacto</li> -->
+                <!-- <li class="inicio glowIn" >Inicio</li>
+                <li class="trabajos glowIn" >Trabajos</li> -->
+                <li class="sobre_me glowIn" ><a href="./about_me/about_me.html"></a> Sobre mi</li>
+                <li class="contacto glowIn" ><a href="./cerebro/cerebro.html"></a> CV</li>
             
                 <div class="container_contact">
                     <div onclick="location.href='https://www.linkedin.com/in/nadia-klokova-91a672a7/'"  class = "contact">
