--- a/index.html
+++ b/index.html
@@ -528,10 +528,26 @@
                     <svg id="cerebro_svg" version="1.0" xmlns="http://www.w3.org/2000/svg"
          width="1225.000000pt" height="1271.000000pt" viewBox="0 0 1225.000000 1271.000000"
          preserveAspectRatio="xMidYMid meet">
+
+         <linearGradient id="logo-gradient" x1="50%" y1="0%" x2="50%" y2="100%" > 
+            
+            <stop offset="0%" stop-color="#7A5FFF">
+                <animate attributeName="stop-color" values="#7A5FFF; #FFFA5F; #01FF89; #FF5FFA; #7A5FFF" dur="4s" repeatCount="indefinite"></animate>
+            </stop>
+
+            <stop offset="100%" stop-color="#01FF89">
+                <animate attributeName="stop-color" values="#01FF89; #7A5FFF; #01FF89" dur="4s" repeatCount="indefinite"></animate>
+            </stop>
+
+        </linearGradient> 
+   
+
+
+
         
         <g transform="translate(0.000000,1271.000000) scale(0.100000,-0.100000)"
         fill="#000000" stroke="none">
-        <path class="cerebro_izq" d="M6207 12063 c-2 -4 -6 -2022 -8 -4483 l-4 -4475 831 -3 832 -2 6 112
+        <path class="cerebro_izq" fill="url('#logo-gradient')" d="M6207 12063 c-2 -4 -6 -2022 -8 -4483 l-4 -4475 831 -3 832 -2 6 112
         c29 488 91 767 241 1073 135 276 283 446 735 850 574 511 763 738 960 1148
         186 387 286 765 357 1357 27 218 27 241 27 755 1 528 0 531 -27 719 -68 462
         -156 769 -317 1104 -304 631 -750 1077 -1403 1402 -450 224 -944 359 -1567
