ajustes de animaciones texto y cerebro

--- a/index.html
+++ b/index.html
@@ -210,9 +210,9 @@
                   <span class="texto">I'm a </span>
                   <span class="texto"><strong>front-end</strong></span>
                   <span class="texto"><strong> developer</strong></span>
+                  <span class="texto">and</span>
+                  <span class="texto">this is</span>
                   <span class="texto">my website</span>
-                  <span class="texto">is under</span>
-                  <span class="texto">construction</span>
                 </h2>
     
                 <h2 class="tercero">
@@ -536,7 +536,7 @@
             </stop>
 
             <stop offset="100%" stop-color="#01FF89">
-                <animate attributeName="stop-color" values="#01FF89; #7A5FFF; #01FF89" dur="4s" repeatCount="indefinite"></animate>
+                <animate attributeName="stop-color" values="#01FF89; #7A5FFF; #5FFF96; #FFFA5F; #01FF89" dur="4s" repeatCount="indefinite"></animate>
             </stop>
 
         </linearGradient> 
