toggle nav solucionado, menu abre y cierra

--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
 
         <div class="background-wrap">
             <div class="background">
-                <ul class="navegar">
+                <ul class="navegar" >
                     <!-- <li class="inicio glowIn" >Inicio</li>
                     <li class="trabajos glowIn" >Trabajos</li> -->
-                    <li data-target='#inicio'class="active">Home</li>
-                    <li data-target='#curriculum' >CV</li>
-                    <li data-target='#about_me' >About me</li>
+                    <li data-target='#inicio'class="active"onclick="closeNav()" > Home</li>
+                    <li data-target='#curriculum'onclick="closeNav()" > CV </li>
+                    <li data-target='#about_me' onclick="closeNav()" >About me </li>
                     
                 
                     <div class="container_contact">
