--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <!-- <li class="inicio glowIn" >Inicio</li>
                     <li class="trabajos glowIn" >Trabajos</li> -->
                     <li data-target='#inicio'class="active"onclick="closeNav()" > Home</li>
-                    <li data-target='#curriculum'onclick="closeNav()" > CV </li>
+                    <li data-target='#curriculum'onclick="closeNav()" > Skills </li>
                     <li data-target='#about_me' onclick="closeNav()" >About me </li>
                     
                 
