--- a/index.html
+++ b/index.html
@@ -708,6 +708,22 @@
         </section>
       <!----------------------ABOUT ME----------------------------------------------------------  -->
         <section data-content id="about_me">
+            <div class="container_rocket">
+                <div id="rocket" class="rocket-wrapper">
+                  <img class="rocket" src="https://ig.solcode.net/src/rocket.svg" alt="">
+              
+                  <div class="flame-wrapper">
+                    <div class="flame-anim">
+                      <div class="flame red"></div>
+                      <div class="flame orange"></div>
+                      <div class="flame gold"></div>
+                      <div class="flame white"></div>
+                    </div>
+                  </div>
+                </div>
+              
+                <!-- <button onclick="launchRocket()" class="btn">Launch rocket</button> -->
+              </div>
             <div class="about_me">
                 <div class="container_text">
                     <div class="titulo">
@@ -733,7 +749,7 @@
                         Fan of DIY and creative crafts, Brooklyn fitboxing, TV series.
                     </p>
                     <p style="animation-delay: 3s;">
-                       I am looking for the opportunity to be part of a team with a positive environment, to be able to contribute ideas and continue learning and growing professionally.
+                       I am looking for an opportunity being part of a team with a positive environment, to be able to contribute ideas and continue learning and growing professionally.
                     </p>
                     <p style="animation-delay: 3.3s;">
                         <a class="glowIn" style="animation-delay: 10s;" onclick="location.href='mailto:nadiyaklokova@gmail.com'" rel="contact">Let’s make something special.</a>
