rocket svg nuevo

--- a/index.html
+++ b/index.html
@@ -710,7 +710,25 @@
         <section data-content id="about_me">
             <div class="container_rocket">
                 <div id="rocket" class="rocket-wrapper">
-                  <img class="rocket" src="https://ig.solcode.net/src/rocket.svg" alt="">
+                  <!-- <img class="rocket" src="https://ig.solcode.net/src/rocket.svg" alt=""> -->
+                  <svg id="rocket_svg" version="1.0" xmlns="http://www.w3.org/2000/svg"
+                  width="512.000000pt" height="512.000000pt" viewBox="0 0 512.000000 512.000000"
+                  preserveAspectRatio="xMidYMid meet">
+                 
+                      <g transform="translate(0.000000,512.000000) scale(0.100000,-0.100000)"
+                      fill="#000000" stroke="none">
+                      <path class="rocket" d="M4765 5113 c-724 -58 -1447 -342 -2070 -812 -144 -108 -230 -184
+                      -400 -351 l-150 -148 -120 -6 c-594 -30 -1232 -308 -1668 -727 -83 -80 -87
+                      -86 -87 -126 0 -32 7 -50 28 -73 l27 -31 428 -62 427 -62 -59 -67 c-67 -76
+                      -80 -111 -57 -160 22 -45 1393 -1414 1430 -1428 46 -17 81 -3 154 60 l67 59
+                      60 -417 c43 -298 65 -426 77 -444 24 -36 78 -53 123 -38 62 20 241 229 387
+                      450 251 379 412 862 434 1295 l6 120 148 150 c222 226 345 376 508 622 414
+                      621 662 1380 662 2021 0 108 -18 154 -66 172 -23 9 -194 11 -289 3z m-1002
+                      -938 c207 -44 368 -205 412 -412 8 -37 15 -86 15 -108 0 -189 -125 -391 -292
+                      -473 -71 -35 -177 -62 -243 -62 -188 0 -391 126 -473 292 -35 71 -62 177 -62
+                      243 0 132 62 277 160 375 131 131 305 183 483 145z"/>
+                      </g>
+                 </svg>
               
                   <div class="flame-wrapper">
                     <div class="flame-anim">
