arreglado contactos menu, ajustes p a cambio de color

--- a/index.html
+++ b/index.html
@@ -785,7 +785,7 @@
                        I am looking for an opportunity being part of a team with a positive environment, to be able to contribute ideas and continue learning and growing professionally.
                     </p>
                     <p style="animation-delay: 3.3s;">
-                        <a class="glowIn" style="animation-delay: 10s;" onclick="location.href='mailto:nadiyaklokova@gmail.com'" rel="contact">Let’s make something special.</a>
+                        <a style="animation-delay: 10s;" onclick="location.href='mailto:nadiyaklokova@gmail.com'" rel="contact">Let’s make something special.</a>
                        
                     </p>
                 </div>    
