animat rocket, ajustes nombres, bg about me

--- a/index.html
+++ b/index.html
@@ -428,12 +428,7 @@
                    
                    <g transform="translate(0.000000,1151.000000) scale(0.100000,-0.100000)"
                    fill="#000000" stroke="none">
-                   <path class="cerebro_izq" fill="url('#logo-gradient')" d="M4417 11298 c-4 -13 -7 -2011 -7 -4440 l0 -4418 838 0 839 0 7 126
-                   c9 159 47 419 80 550 73 288 210 565 381 770 97 117 230 247 475 467 340 305
-                   467 426 567 539 321 364 533 778 663 1298 57 230 118 619 140 899 13 167 13
-                   923 0 1086 -18 236 -80 569 -149 809 -97 333 -280 708 -476 972 -137 184 -340
-                   397 -505 530 -412 332 -939 576 -1529 708 -356 80 -685 119 -1042 123 l-277 4
-                   -5 -23z"/>
+                 
                    <path class="cerebro_neuronas" d="M3448 11270 c-52 -9 -79 -22 -137 -63 -27 -20 -59 -31 -106 -38 -156
                    -22 -355 -109 -445 -195 -31 -30 -60 -54 -63 -54 -3 0 -28 14 -54 30 -26 17
                    -54 30 -62 30 -9 0 -43 14 -76 30 -33 16 -68 30 -78 30 -10 0 -40 7 -67 16
@@ -647,6 +642,14 @@
                    -5 34 -11 26 -17 68 -3 104 32 28 28 29 34 24 87 -5 49 -11 61 -41 88 l-36 31
                    0 633 0 633 45 44 c41 39 45 47 45 92 0 42 -5 54 -31 80 -26 26 -38 31 -77 30
                    -26 -1 -59 -8 -74 -16z"/>
+
+                   <path class="cerebro_derch" fill="url('#logo-gradient')" d="M4417 11298 c-4 -13 -7 -2011 -7 -4440 l0 -4418 838 0 839 0 7 126
+                   c9 159 47 419 80 550 73 288 210 565 381 770 97 117 230 247 475 467 340 305
+                   467 426 567 539 321 364 533 778 663 1298 57 230 118 619 140 899 13 167 13
+                   923 0 1086 -18 236 -80 569 -149 809 -97 333 -280 708 -476 972 -137 184 -340
+                   397 -505 530 -412 332 -939 576 -1529 708 -356 80 -685 119 -1042 123 l-277 4
+                   -5 -23z"/>
+
                    <path class="cerebro_abajo" d="M2917 2189 c-87 -20 -154 -74 -198 -159 -20 -37 -24 -60 -24 -130 0
                    -73 4 -92 27 -136 31 -59 84 -109 143 -135 40 -18 112 -18 1523 -19 l1481 -1
                    48 21 c61 27 108 72 141 135 22 43 26 63 26 135 0 72 -4 93 -26 136 -35 66
