carpetas organizadas, img_web añadida

--- a/index.html
+++ b/index.html
@@ -7,34 +7,34 @@
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="menu.css">
-    <link rel="stylesheet" href="inicio_texto.css">
-    <link rel="stylesheet" href="inicio_chica.css">
-    <link rel="stylesheet" href="svg.css">
-    <link rel="stylesheet" href="window.css">
+    <link rel="stylesheet" href="./menu/menu.css">
+    <link rel="stylesheet" href="./inicio_home/inicio_texto.css">
+    <link rel="stylesheet" href="./inicio_home/inicio_chica.css">
+    <link rel="stylesheet" href="./inicio_home/window.css">
+    <link rel="stylesheet" href="./inicio_home/svg.css">
     <link rel="stylesheet" href="./about_me/about_me.css">
-    <link rel="stylesheet" href="./cerebro/cerebro.css">
+    <link rel="stylesheet" href="./skills/skills.css">
 
     
     <!-- Primary Meta Tags -->
     <title>Nadia Klokova | front-end</title>
-	<meta name="title" content="Nadia Klokova | front-end">
+	<meta name="title" content="Nadia Klokova | front-end developer">
 	<meta name="description" content="Front-end developer portfolio website.">
     <meta name="author" content="Nadia Klokova">
 
     <!-- Open Graph / Facebook -->
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="http://www.nadiaklokova.com/">
-	<meta property="og:title" content="Nadia Klokova | front-end">
+	<meta property="og:title" content="Nadia Klokova | front-end developer">
 	<meta property="og:description" content="Front-end developer portfolio website.">
-	<meta property="og:image" content="">
+	<meta property="og:image" content="http://www.nadiaklokova.com/img/img_web.png">
 
 	<!-- Twitter -->
 	<meta property="twitter:card" content="summary_large_image">
 	<meta property="twitter:url" content="">
 	<meta property="twitter:title" content="Nadia Klokova | front-end">
 	<meta property="twitter:description" content="Front-end developer portfolio website.">
-	<meta property="twitter:image" content="">
+	<meta property="twitter:image" content="http://www.nadiaklokova.com/img/img_web.png">
 
 </head>
 <body>
@@ -59,7 +59,7 @@
                         <div onclick="location.href='https://github.com/creativa-nk'" class = "contact">
                             <i class="fab fa-github"></i>
                         </div>
-                        <div onclick="location.href='mailto:nadiyaklokova@gmail.com'"  class = "contact">
+                        <div onclick="location.href='mailto:info@nadiaklokova.com'"  class = "contact">
                             <i class="fas fa-at"></i>
                         </div>
                     </div>
