--- a/index.html
+++ b/index.html
@@ -410,7 +410,8 @@
                </div>
         
                 <div class="container_svg">
-                    <svg id="cerebro_svg" version="1.0" xmlns="http://www.w3.org/2000/svg"
+                    <img src="./img/cerebro2_blanco.png" alt="">
+                   <!--  <svg id="cerebro_svg" version="1.0" xmlns="http://www.w3.org/2000/svg"
                     width="868.000000pt" height="1151.000000pt" viewBox="0 0 868.000000 1151.000000"
                     preserveAspectRatio="xMidYMid meet">
 
@@ -662,7 +663,7 @@
                    -15 133 -18 385 -18 l300 0 125 32 c218 55 374 123 541 234 100 67 279 236
                    279 263 0 15 -108 16 -1261 16 -1005 0 -1259 -3 -1253 -12z"/>
                    </g>
-                   </svg>
+                   </svg> -->
                 </div>
                        
                 <div class="soft_skills">
