--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
                     27 5 52 10 55 6 3 10 30 10 60 0 30 5 57 10 60 6 3 10 15 10 26 0 19 4 28 28
                     76 7 13 12 29 12 36 0 33 83 170 126 207 63 55 82 57 369 52 99 -2 184 -7 190
                     -13z"/>
-                    <path d="M27815 18899 c-85 -42 -115 -99 -115 -214 0 -46 5 -87 10 -90 6 -3
+                    <path class="cerebro_nuevo" d="M27815 18899 c-85 -42 -115 -99 -115 -214 0 -46 5 -87 10 -90 6 -3
                     10 -16 10 -29 0 -28 29 -56 58 -56 30 0 44 30 32 71 -6 19 -10 68 -10 110 0
                     96 19 119 97 119 56 0 64 -6 97 -72 36 -70 48 -71 114 -5 45 45 60 55 70 45 7
                     -7 12 -20 12 -31 0 -44 55 -62 91 -29 30 29 66 45 83 39 12 -5 16 -22 16 -72
@@ -464,14 +464,14 @@
                     110 0 82 -7 106 -44 150 -16 17 -30 22 -71 22 -28 0 -56 -5 -63 -12 -9 -9 -19
                     -5 -45 20 -27 26 -41 32 -78 32 -44 0 -99 -18 -99 -32 0 -17 -28 -7 -50 17
                     -54 57 -141 71 -215 34z"/>
-                    <path d="M27891 18543 c0 -21 9 -51 19 -68 10 -16 30 -50 43 -75 13 -25 38
+                    <path class="cerebro_nuevo" d="M27891 18543 c0 -21 9 -51 19 -68 10 -16 30 -50 43 -75 13 -25 38
                     -71 55 -104 20 -35 32 -73 32 -95 0 -28 7 -44 29 -65 16 -15 31 -41 35 -56 3
                     -16 17 -37 31 -46 24 -16 27 -16 45 1 17 16 20 31 20 116 0 54 4 101 10 104 6
                     3 10 37 10 75 0 38 7 95 15 126 16 61 9 84 -24 84 -30 0 -81 -75 -81 -118 0
                     -10 -6 -30 -12 -45 -13 -27 -28 -36 -28 -16 0 6 -13 31 -30 56 -16 24 -30 48
                     -30 52 0 4 -9 16 -20 26 -11 10 -20 22 -20 27 0 19 -58 58 -85 58 -11 0 -15
                     -10 -14 -37z"/>
-                    <path d="M19755 19470 c-3 -5 -21 -10 -40 -10 -19 0 -37 -4 -40 -10 -3 -5 -22
+                    <path class="cerebro_nuevo" d="M19755 19470 c-3 -5 -21 -10 -40 -10 -19 0 -37 -4 -40 -10 -3 -5 -22
                     -10 -41 -10 -19 0 -34 -4 -34 -9 0 -5 -18 -11 -41 -15 -45 -7 -84 -24 -244
                     -103 -113 -55 -121 -60 -190 -103 -22 -14 -52 -32 -67 -39 -15 -8 -36 -21 -46
                     -30 -23 -20 -51 -39 -77 -50 -12 -5 -27 -16 -34 -25 -7 -9 -19 -16 -26 -16 -6
@@ -612,7 +612,7 @@
                     109 75 4 0 16 9 26 20 10 11 24 20 30 20 7 0 19 7 26 16 13 15 51 35 57 29 2
                     -1 -5 -18 -16 -36z m-822 -653 c0 -7 -7 -19 -15 -26 -12 -10 -15 -9 -15 7 0
                     11 3 23 7 26 11 12 23 8 23 -7z"/>
-                    <path d="M22095 19450 c-4 -6 -75 -10 -180 -10 -105 0 -176 -4 -180 -10 -3 -5
+                    <path class="cerebro_nuevo" d="M22095 19450 c-4 -6 -75 -10 -180 -10 -105 0 -176 -4 -180 -10 -3 -5
                     -27 -10 -53 -10 -26 -1 -65 -7 -87 -15 -22 -8 -50 -15 -62 -15 -12 0 -25 -4
                     -28 -10 -3 -5 -15 -10 -25 -10 -11 0 -35 -9 -55 -20 -20 -11 -41 -20 -48 -20
                     -18 0 -67 -24 -67 -32 0 -5 -9 -8 -20 -8 -11 0 -20 -4 -20 -8 0 -5 -20 -19
@@ -4814,7 +4814,7 @@
                         Well-organised person, problem solver, autodidact forever, work with high attention to detail, like teamwork, I consider myself a creative person.  
                     </p>
                     <p style="animation-delay: 2.7s;">
-                        Fan of DIY and creative crafts, Brooklyn fitboxing, TV series.
+                        Fan of DIY and creative crafts, Brooklyn fitboxing, Friends TV series.
                     </p>
                     <p style="animation-delay: 3s;">
                        I am looking for an opportunity being part of a team with a positive environment, to be able to contribute ideas and continue learning and growing professionally.
