cambio de class name

--- a/index.html
+++ b/index.html
@@ -4847,38 +4847,38 @@
                 <label class="item" ></label>
                 <label class="item" ></label>
             </main>
-        <div class="player">
+        <div class="container_info">
             <div class="upper-part">
                 <div class="info-area" id="test">
-                    <label class="song-info" id="song-info-1">
+                    <label class="work-info" id="work-info-1">
                     <div class="title">Bunker</div>
                     <div class="sub-line">
                         <div class="subtitle">Html, Css, JavaScript</div>
                         <div class="time">4.05</div>
                     </div>
                     </label>
-                    <label class="song-info" id="song-info-2">
+                    <label class="work-info" id="work-info-2">
                     <div class="title">Words Remain</div>
                     <div class="sub-line">
                         <div class="subtitle">Moderator</div>
                         <div class="time">4.05</div>
                     </div>
                     </label>
-                    <label class="song-info" id="song-info-3">
+                    <label class="work-info" id="work-info-3">
                     <div class="title">Falling Out</div>
                     <div class="sub-line">
                         <div class="subtitle">Otzeki</div>
                         <div class="time">4.05</div>
                     </div>
                     </label>
-                    <label class="song-info" id="song-info-4">
+                    <label class="work-info" id="work-info-4">
                     <div class="title">Trabajo 4</div>
                     <div class="sub-line">
                         <div class="subtitle">Otzeki</div>
                         <div class="time">4.05</div>
                     </div>
                     </label>
-                    <label class="song-info" id="song-info-5">
+                    <label class="work-info" id="work-info-5">
                     <div class="title">Trabajo 5</div>
                     <div class="sub-line">
                         <div class="subtitle">Otzeki</div>
