--- a/index.html
+++ b/index.html
@@ -4621,8 +4621,12 @@
             <input type="radio" name="slider" id="item-5">
             <main id="carousel">
                 <label class="item" ></label>
-                <label class="item" ></label>
-                <label class="item" ></label>
+                <label class="item" >
+                    <video src="./video/dulces-con_ilusion.mp4" controls loop></video>
+                </label>
+                <label class="item" >
+                    <video src="./video/best_chef_ever.mp4" controls loop></video>
+                </label>
                 <label class="item" ></label>
                 <label class="item" ></label>
             </main>
@@ -4632,21 +4636,21 @@
                     <label class="work-info" id="work-info-1">
                     <div class="title">Bunker</div>
                     <div class="sub-line">
-                        <div class="subtitle">Html, Css, JavaScript</div>
+                        <div class="subtitle">Html, Css, React</div>
                         <div class="time">4.05</div>
                     </div>
                     </label>
                     <label class="work-info" id="work-info-2">
-                    <div class="title">Words Remain</div>
+                    <div class="title">Dulces con ilusión</div>
                     <div class="sub-line">
-                        <div class="subtitle">Moderator</div>
+                        <div class="subtitle">Html, Css, JavaScript</div>
                         <div class="time">4.05</div>
                     </div>
                     </label>
                     <label class="work-info" id="work-info-3">
-                    <div class="title">Falling Out</div>
+                    <div class="title">best chef ever</div>
                     <div class="sub-line">
-                        <div class="subtitle">Otzeki</div>
+                        <div class="subtitle">Html, Css, JavaScript, AOS library</div>
                         <div class="time">4.05</div>
                     </div>
                     </label>
