--- a/index.html
+++ b/index.html
@@ -4621,19 +4621,21 @@
             <input type="radio" name="slider" id="item-5">
             <main id="carousel">
                 <label class="item" >
-                    <video src="./video/react_movies_api.mp4" autoplay controls muted loop ></video>
+                    <video  autoplay controls='controls' muted loop >
+                        <source src="./video/react_movies_api.mp4#t=1s,10s" type='video/mp4' >
+                    </video>
                 </label>
                 <label class="item" >
-                    <video src="./video/dulces-con-ilusion_comprimido.mp4#t=50,130" autoplay controls muted loop ></video>
+                    <video src="./video/dulces-con-ilusion_comprimido.mp4#t=50,130" autoplay muted loop ></video>
                 </label>
                 <label class="item" >
-                    <video src="./video/best_chef_ever_comprimido.mp4"  autoplay controls muted loop > </video>
+                    <video src="./video/best_chef_ever_comprimido.mp4"  autoplay muted loop > </video>
                 </label>
                 <label class="item" >
-                    <video src="./video/maia_studio_web.mp4"  autoplay controls muted loop > </video>
+                    <video src="./video/maia_studio_web.mp4"  autoplay muted loop > </video>
                 </label>
                 <label class="item" >
-                    <video class="video_willy_wonka" src="./video/willy_wonka.mp4"  autoplay controls muted loop > </video>
+                    <video class="video_willy_wonka" src="./video/willy_wonka.mp4"  autoplay muted loop > </video>
                 </label>
             </main>
         <div class="container_info">
@@ -4641,45 +4643,45 @@
                 <div class="info-area" id="test">
                     <label class="work-info" id="work-info-1">
                     <div class="title">
-                        <a href="https://github.com/creativa-nk/react-movies">react movies api</a></div>
+                        <a href="https://github.com/creativa-nk/react-movies"> <span>link</span> react movies api</a></div>
                     <div class="sub-line">
                         <div class="subtitle">Html, Css, React</div>
-                       <!--  <div class="time">4.05</div> -->
+                       <!--  <div class="link"></div> -->
                     </div>
                     </label>
 
                     <label class="work-info" id="work-info-2">
                     <div class="title">
-                        <a href=" https://creativa-nk.github.io/my_favourite_cupcake/" target="_blank">My favourite cupcake</a>
+                        <a href=" https://creativa-nk.github.io/my_favourite_cupcake/" target="_blank"><span>link</span> My favourite cupcake</a>
                      </div>
                     <div class="sub-line">
                         <div class="subtitle">Html, Css, JavaScript</div>
-                       <!--  <div class="time">4.05</div> -->
+                       <!--  <div class="link">4.05</div> -->
                     </div>
                     </label>
                     <label class="work-info" id="work-info-3">
                     <div class="title">
-                        <a href="https://creativa-nk.github.io/best_chef_ever/" target="_blank" >best chef ever</a>
+                        <a href="https://creativa-nk.github.io/best_chef_ever/" target="_blank" > <span>link</span> best chef ever</a>
                      </div>
                     <div class="sub-line">
                         <div class="subtitle">Html, Css, JavaScript, AOS library</div>
-                       <!--  <div class="time">4.05</div> -->
+                       <!--  <div class="link">4.05</div> -->
                     </div>
                     </label>
                     <label class="work-info" id="work-info-4">
                     <div class="title">
-                        <a href="http://maiastudiovr.com/"> Maia studio web</a></div>
+                        <a href="http://maiastudiovr.com/"><span>link</span> Maia studio web</a></div>
                     <div class="sub-line">
                         <div class="subtitle">Html, Css, JavaScript, AOS library</div>
-                       <!--  <div class="time">4.05</div> -->
+                       <!--  <div class="link">4.05</div> -->
                     </div>
                     </label>
                     <label class="work-info" id="work-info-5">
                     <div class="title">
-                        <a href=" https://creativa-nk.github.io/willyWonka_css_aninations/ ">Animation Willy Wonka</a></div>
+                        <a href=" https://creativa-nk.github.io/willyWonka_css_aninations/ "><span>link</span> Animation Willy Wonka</a></div>
                     <div class="sub-line">
                         <div class="subtitle">Html, Css </div>
-                       <!--  <div class="time">4.05</div> -->
+                       <!--  <div class="link">4.05</div> -->
                     </div>
                     </label>
                     
