--- a/index.html
+++ b/index.html
@@ -4534,6 +4534,10 @@
                 <span class="letra" style="--i:4">k</span>
                 <span class="letra" style="--i:5">s</span> 
             </div>
+            <div class="subtitulo">
+                <h4>
+                    I do each project from scratch: the idea, design UI/UX , Photoshop retouching, SVG images, layout (HTML, CSS,Animations, SCSS, Bootstrap, JS), responsive design and of course a little research to keep learning with every job I do.</h4>
+            </div>
 
             <input type="radio" name="slider" id="item-1" checked>
             <input type="radio" name="slider" id="item-2">
@@ -4546,7 +4550,7 @@
                     <video class="cuentacuentos" src="./video/cuentacuentos.mp4"  autoplay muted loop > </video>
                 </label>
                 <label class="item" >
-                    <video class="cuentacuentos" src="./video/react_movies_api.mp4#t=1s,10s"  autoplay muted loop > </video>
+                    <video src="./video/react_movies_api.mp4#t=1s,10s"  autoplay muted loop > </video>
                   <!--   <video  autoplay controls='controls' muted loop >
                         <source src="./video/react_movies_api.mp4#t=1s,10s" type='video/mp4' >
                     </video> -->
@@ -4572,7 +4576,7 @@
                         <div class="title">
                             <a href=" https://creativa-nk.github.io/cuentacuentos/ "><span>link</span> Storyteller web</a>
                         </div>
-                            <div class="subtitle">Html, CSS, CSS Animations, JavaScript </div>
+                            <div class="subtitle">Html, CSS, SVG y CSS Animations, JavaScript </div>
                            <!--  <div class="link">4.05</div> -->
                     </label>
                     <label class="work-info" id="work-info-2">
