nuevo trabajo añadido

--- a/index.html
+++ b/index.html
@@ -4545,7 +4545,11 @@
             <input type="radio" name="slider" id="item-4">
             <input type="radio" name="slider" id="item-5">
             <input type="radio" name="slider" id="item-6">
+            <input type="radio" name="slider" id="item-7">
             <main id="carousel">
+                <label class="item" >
+                    <video class="creativa" src="./video/videoCereativaWeb.mp4"  autoplay muted loop > </video>
+                </label>
                 <label class="item" >
                     <video class="cuentacuentos" src="./video/cuentacuentos.mp4"  autoplay muted loop > </video>
                 </label>
@@ -4574,26 +4578,33 @@
                 <div class="info-area" id="test">
                     <label class="work-info" id="work-info-1">
                         <div class="title">
-                            <a href=" https://creativa-nk.github.io/cuentacuentos/ "><span>link</span> Storyteller web</a>
+                            <a href="https://creativa-nk.github.io/CREATIVA_web/"><span>link</span> CREATIVA</a>
                         </div>
                             <div class="subtitle">Html, CSS, SVG y CSS Animations, JavaScript </div>
                            <!--  <div class="link">4.05</div> -->
                     </label>
                     <label class="work-info" id="work-info-2">
+                        <div class="title">
+                            <a href=" https://creativa-nk.github.io/cuentacuentos/ "><span>link</span> Storyteller web</a>
+                        </div>
+                            <div class="subtitle">Html, CSS, SVG y CSS Animations, JavaScript </div>
+                           <!--  <div class="link">4.05</div> -->
+                    </label>
+                    <label class="work-info" id="work-info-3">
                     <div class="title">
                         <a href="https://github.com/creativa-nk/react-movies"> <span>link</span> react movies api</a></div>
                         <div class="subtitle">Html, Sass, React</div>
                        <!--  <div class="link"></div> -->
                     </label>
 
-                    <label class="work-info" id="work-info-3">
+                    <label class="work-info" id="work-info-4">
                         <div class="title">
                             <a href=" https://creativa-nk.github.io/my_favourite_cupcake/" target="_blank"><span>link</span> My favourite cupcake</a>
                         </div>
                         <div class="subtitle">Html, CSS, JavaScript</div>
                         <!--  <div class="link">4.05</div> -->
                     </label>
-                    <label class="work-info" id="work-info-4">
+                    <label class="work-info" id="work-info-5">
                         <div class="title">
                             <a href="https://creativa-nk.github.io/best_chef_ever/" target="_blank" > <span>link</span> best chef ever</a>
                         </div>
@@ -4601,7 +4612,7 @@
                         <!--  <div class="link">4.05</div> -->
                    
                     </label>
-                    <label class="work-info" id="work-info-5">
+                    <label class="work-info" id="work-info-6">
                         <div class="title">
                             <a href="http://maiastudiovr.com/"><span>link</span> Maia studio web</a>
                         </div>
@@ -4609,7 +4620,7 @@
                         <!--  <div class="link">4.05</div> -->
                   
                     </label>
-                    <label class="work-info" id="work-info-6">
+                    <label class="work-info" id="work-info-7">
                     <div class="title">
                         <a href=" https://creativa-nk.github.io/willyWonka_css_aninations/ "><span>link</span> Animation Willy Wonka</a></div>
                         <div class="subtitle">Html, CSS </div>
